--- a/index.html
+++ b/index.html
@@ -1,148 +1,186 @@
-import { useEffect, useState } from "react"; import { Button } from "@/components/ui/button"; import { Card, CardContent } from "@/components/ui/card"; import { Input } from "@/components/ui/input"; import { motion } from "framer-motion";
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <title>Турниры Standoff 2</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      background: linear-gradient(to bottom, #111, #000);
+      color: white;
+    }
+    header {
+      text-align: center;
+      padding: 50px 20px;
+    }
+    h1 {
+      color: #facc15;
+      font-size: 48px;
+    }
+    .container {
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+    }
+    .card {
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid #facc15;
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 30px;
+    }
+    .btn {
+      background: #facc15;
+      color: black;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    .btn:hover {
+      background: #eab308;
+    }
+    .hidden {
+      display: none;
+    }
+    input[type="text"], input[type="tel"] {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      border-radius: 8px;
+      border: none;
+    }
+    video {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 10px;
+    }
+    footer {
+      text-align: center;
+      padding: 30px;
+      font-size: 14px;
+      color: #aaa;
+    }
+  </style>
+</head>
+<body>
 
-export default function TournamentSite() { const [tournament, setTournament] = useState(null); const [acceptedRules, setAcceptedRules] = useState(false); const [showRegistration, setShowRegistration] = useState(false); const [phone, setPhone] = useState(""); const [standoffId, setStandoffId] = useState(""); const [step, setStep] = useState("intro"); const [teamMates, setTeamMates] = useState(["", "", "", "", ""]); const [teamName, setTeamName] = useState(""); const [paymentCode, setPaymentCode] = useState(""); const [teams, setTeams] = useState([]);
+  <header>
+    <h1>🔥 Турниры Standoff 2</h1>
+  </header>
 
-useEffect(() => { fetch("/data/tournaments/t3.txt") .then((res) => res.text()) .then((text) => { const [title, desc, image, players, datetime, prize, fee, videos, highlights] = text.split(";"); setTournament({ title, desc, image, players, datetime, prize, fee, videos: videos.split(","), highlights: highlights.split(",") }); }); }, []);
+  <div class="container">
 
-const handleParticipateClick = () => { setShowRegistration(true); };
+    <div class="card">
+      <h2>Турнир #3</h2>
+      <p>Описание турнира: Турнир 5x5, приз — 5000₽, взнос: 100₽ с игрока</p>
+      <p>Дата: 10 июля 2025, 18:00</p>
+      <button class="btn" onclick="showRegistration()">Участвовать</button>
+    </div>
 
-const handleRegistrationSubmit = () => { if (!phone || !standoffId || !acceptedRules) return alert("Заполните все поля и примите правила"); setStep("team"); };
+    <div id="registration" class="card hidden">
+      <h3>Регистрация</h3>
+      <input type="tel" placeholder="Номер телефона" id="phone" />
+      <input type="text" placeholder="ID в Standoff 2" id="standoffId" />
+      <label>
+        <input type="checkbox" id="rules" /> Я прочитал(а) и принимаю правила
+      </label>
+      <button class="btn" onclick="submitRegistration()">Далее</button>
+    </div>
 
-const handleTeamSubmit = () => { if (!teamName || teamMates.some((id) => !id)) return alert("Заполните название команды и всех игроков"); setStep("payment"); };
+    <div id="teamForm" class="card hidden">
+      <h3>Состав команды</h3>
+      <input type="text" placeholder="Название команды" id="teamName" />
+      <div id="playersInputs"></div>
+      <button class="btn" onclick="submitTeam()">Далее к оплате</button>
+    </div>
 
-const handlePaymentSubmit = () => { if (!paymentCode) return alert("Введите код оплаты"); alert("Успешно! Ваша команда добавлена."); setTeams([...teams, { name: teamName }]); setShowRegistration(false); };
+    <div id="paymentForm" class="card hidden">
+      <h3>Оплата</h3>
+      <p>Введите код, полученный после оплаты:</p>
+      <input type="text" placeholder="Код оплаты" id="payCode" />
+      <button class="btn" onclick="confirmPayment()">Подтвердить</button>
+    </div>
 
-return ( <div className="min-h-screen bg-gradient-to-b from-gray-900 to-black text-white font-sans"> <header className="text-center py-10"> <motion.h1 initial={{ opacity: 0, y: -50 }} animate={{ opacity: 1, y: 0 }} transition={{ duration: 1 }} className="text-5xl font-bold text-yellow-400" > 🔥 Турниры Standoff 2 </motion.h1> </header>
+    <div class="card" id="teamsList">
+      <h3>Команды:</h3>
+      <ul id="teams"></ul>
+    </div>
 
-{tournament && (
-    <motion.div
-      initial={{ opacity: 0 }}
-      animate={{ opacity: 1 }}
-      transition={{ delay: 0.5 }}
-      className="max-w-4xl mx-auto p-4"
-    >
-      <Card className="bg-white/10 backdrop-blur rounded-2xl shadow-lg border border-yellow-500">
-        <CardContent className="p-6">
-          <h2 className="text-3xl font-semibold text-yellow-300 mb-2">{tournament.title}</h2>
-          <p className="text-gray-300 mb-4">{tournament.desc}</p>
-          <img src={tournament.image} alt="Tournament" className="rounded-lg mb-4" />
-          <p className="text-gray-400">Игроков в команде: {tournament.players}</p>
-          <p className="text-gray-400">Дата: {tournament.datetime}</p>
-          <p className="text-gray-400">Призовой фонд: {tournament.prize}</p>
-          <p className="text-gray-400">Взнос с игрока: {tournament.fee}</p>
-          <Button onClick={handleParticipateClick} className="mt-4 bg-yellow-500 hover:bg-yellow-600">
-            Участвовать в турнире
-          </Button>
-        </CardContent>
-      </Card>
+    <div class="card">
+      <h3>Яркие моменты</h3>
+      <video controls src="videos/highlight1.mp4"></video>
+      <video controls src="videos/highlight2.mp4"></video>
+    </div>
 
-      <div className="mt-10">
-        <h3 className="text-2xl mb-4">Участвующие команды</h3>
-        <ul className="space-y-2">
-          {teams.map((t, idx) => (
-            <li key={idx} className="text-yellow-300">{t.name}</li>
-          ))}
-        </ul>
-      </div>
+    <div class="card">
+      <h3>Полные матчи</h3>
+      <video controls src="videos/match1.mp4"></video>
+      <video controls src="videos/match2.mp4"></video>
+    </div>
 
-      <div className="mt-10">
-        <h3 className="text-2xl mb-4">Яркие моменты</h3>
-        <div className="grid grid-cols-2 gap-4">
-          {tournament.highlights.map((vid, idx) => (
-            <video key={idx} controls className="rounded-xl">
-              <source src={`/videos/${vid}.mp4`} type="video/mp4" />
-            </video>
-          ))}
-        </div>
-      </div>
+  </div>
 
-      <div className="mt-10">
-        <h3 className="text-2xl mb-4">Полные матчи</h3>
-        <div className="grid grid-cols-2 gap-4">
-          {tournament.videos.map((vid, idx) => (
-            <video key={idx} controls className="rounded-xl">
-              <source src={`/videos/${vid}.mp4`} type="video/mp4" />
-            </video>
-          ))}
-        </div>
-      </div>
-    </motion.div>
-  )}
-
-  {showRegistration && (
-    <motion.div
-      initial={{ opacity: 0 }}
-      animate={{ opacity: 1 }}
-      className="fixed inset-0 bg-black/80 backdrop-blur flex items-center justify-center z-50 p-4"
-    >
-      <Card className="w-full max-w-lg bg-white/10 border border-white/20 rounded-xl p-6 text-white">
-        {step === "intro" && (
-          <div>
-            <h3 className="text-xl font-semibold mb-4">Регистрация</h3>
-            <label className="block mb-2">Номер телефона:</label>
-            <Input value={phone} onChange={(e) => setPhone(e.target.value)} className="mb-4" />
-            <label className="block mb-2">ID в Standoff 2:</label>
-            <Input value={standoffId} onChange={(e) => setStandoffId(e.target.value)} className="mb-4" />
-            <div className="flex items-center mb-4">
-              <input
-                type="checkbox"
-                className="mr-2"
-                checked={acceptedRules}
-                onChange={(e) => setAcceptedRules(e.target.checked)}
-              />
-              <span>Я прочитал и принимаю правила</span>
-            </div>
-            <Button
-              onClick={handleRegistrationSubmit}
-              className="w-full bg-yellow-500 hover:bg-yellow-600"
-            >
-              Далее
-            </Button>
-          </div>
-        )}
-
-        {step === "team" && (
-          <div>
-            <h3 className="text-xl font-semibold mb-4">Введите состав команды</h3>
-            <label className="block mb-2">Название команды:</label>
-            <Input value={teamName} onChange={(e) => setTeamName(e.target.value)} className="mb-4" />
-            {teamMates.map((id, idx) => (
-              <Input
-                key={idx}
-                placeholder={`Игрок ${idx + 1} ID`}
-                value={id}
-                onChange={(e) => {
-                  const newTeam = [...teamMates];
-                  newTeam[idx] = e.target.value;
-                  setTeamMates(newTeam);
-                }}
-                className="mb-2"
-              />
-            ))}
-            <Button onClick={handleTeamSubmit} className="w-full bg-yellow-500 hover:bg-yellow-600 mt-2">
-              Далее к оплате
-            </Button>
-          </div>
-        )}
-
-        {step === "payment" && (
-          <div>
-            <h3 className="text-xl font-semibold mb-4">Оплата</h3>
-            <p className="mb-4">Оплатите участие и введите полученный код подтверждения:</p>
-            <Input value={paymentCode} onChange={(e) => setPaymentCode(e.target.value)} className="mb-4" />
-            <Button onClick={handlePaymentSubmit} className="w-full bg-yellow-500 hover:bg-yellow-600">
-              Подтвердить оплату
-            </Button>
-          </div>
-        )}
-      </Card>
-    </motion.div>
-  )}
-
-  <footer className="text-center text-sm text-gray-500 mt-20 p-4">
-    Все видео — в <a href="https://t.me/yourchannel" className="text-yellow-400 underline">нашем Telegram-канале</a>
+  <footer>
+    Все видео — в <a href="https://t.me/yourchannel" target="_blank" style="color: #facc15;">нашем Telegram-канале</a>
   </footer>
-</div>
 
-); }
+  <script>
+    let teamSize = 5;
 
+    function showRegistration() {
+      document.getElementById("registration").classList.remove("hidden");
+    }
+
+    function submitRegistration() {
+      const phone = document.getElementById("phone").value;
+      const id = document.getElementById("standoffId").value;
+      const rules = document.getElementById("rules").checked;
+      if (!phone || !id || !rules) {
+        alert("Пожалуйста, заполните все поля и примите правила.");
+        return;
+      }
+      document.getElementById("registration").classList.add("hidden");
+      document.getElementById("teamForm").classList.remove("hidden");
+      const playersContainer = document.getElementById("playersInputs");
+      playersContainer.innerHTML = "";
+      for (let i = 1; i <= teamSize; i++) {
+        const input = document.createElement("input");
+        input.type = "text";
+        input.placeholder = `Игрок ${i} ID`;
+        input.className = "player";
+        playersContainer.appendChild(input);
+      }
+    }
+
+    function submitTeam() {
+      const name = document.getElementById("teamName").value;
+      const players = document.querySelectorAll(".player");
+      if (!name || [...players].some(input => !input.value)) {
+        alert("Заполните название команды и всех игроков");
+        return;
+      }
+      document.getElementById("teamForm").classList.add("hidden");
+      document.getElementById("paymentForm").classList.remove("hidden");
+    }
+
+    function confirmPayment() {
+      const code = document.getElementById("payCode").value;
+      if (!code) {
+        alert("Введите код оплаты");
+        return;
+      }
+      const name = document.getElementById("teamName").value;
+      const list = document.getElementById("teams");
+      const li = document.createElement("li");
+      li.textContent = name;
+      list.appendChild(li);
+      document.getElementById("paymentForm").classList.add("hidden");
+      alert("Команда успешно зарегистрирована!");
+    }
+  </script>
+</body>
+</html>
