--- a/index.html
+++ b/index.html
@@ -123,7 +123,21 @@
 
     <div class="card" id="teamsList">
       <h3>Команды:</h3>
-      <ul id="teams"></ul>
+<ul id="teams"></ul>
+
+<h3>Турнирная таблица матчей</h3>
+<table id="matchesTable" style="width: 100%; border-collapse: collapse; margin-top: 15px;">
+  <thead>
+    <tr style="border-bottom: 2px solid #facc15;">
+      <th style="padding: 8px; text-align: left;">Команда 1</th>
+      <th style="padding: 8px;">Счет</th>
+      <th style="padding: 8px; text-align: left;">Команда 2</th>
+      <th style="padding: 8px;">Счет</th>
+      <th style="padding: 8px;">Победитель</th>
+    </tr>
+  </thead>
+  <tbody id="matchesBody"></tbody>
+</table>
     </div>
 
     <div class="card">
